--- a/templates/index.html
+++ b/templates/index.html
@@ -9,7 +9,7 @@
 <body>
     <div class="container">
         <h1>Calculadora</h1>
-        <form action="/media" method="post">
+        <form action="/calcular" method="post">
             <label for="num1">Informe um número: </label>
             <input type="number" id="num1" name="num1" step="0.01" required>
             <label for="num2">Informe outro número: </label>
@@ -20,7 +20,7 @@
             <button type="submit">Calcular</button>
         </form>
 
-        {% if resultado%}
+        {% if acionar==1%}
         <div class="resultado">
             <h2>Resultado da operação</h2>
             <p><strong>Resultado:</strong> {{ resultado }}</p>
